[package]
name = "rustcluster"
version = "0.1.0"
edition = "2021"
description = "A Vercel-like platform for deploying multiple Telegram bots and apps on a single instance"

[[bin]]
name = "rustcluster"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "compression-gzip"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database (Turso/libSQL - local mode)
libsql = "0.9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"

# HTTP client (GitHub App API calls)
reqwest = { version = "0.12", features = ["json"] }

# Embedded frontend
rust-embed = { version = "8", features = ["mime-guess", "interpolate-folder-path"] }
mime_guess = "2"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
rand = "0.8"

# System info
sysinfo = "0.33"

# HMAC for webhook verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
